--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,18 @@
   },
   "dependencies": {
     "argon2": "^0.27.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "helmet": "^4.2.0",
+    "hpp": "^0.2.3",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
-    "validator": "^13.5.1"
+    "validator": "^13.5.1",
+    "xss-clean": "^0.1.1"
   }
 }
