--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "validator": "^13.5.1",
     "xss-clean": "^0.1.1"
   }
