Somewhat added filter and search function to articles

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -81,7 +81,8 @@
         {
           "trailingComma": "es5",
           "singleQuote": true,
-          "printWidth": 80
+          "printWidth": 80,
+          "endOfLine": "auto"
         }
       ]
     },
