finished mail setup

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,9 @@ DATABASE_LOCAL=mongodb://localhost:27017/gruppe12
 JWT_SECRET=TIBXUmY78G2cmPr2NfRNbwwGXO5LuvUb-WJVhp0O1ho
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRE_TIME=7
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER= 
+EMAIL_PASSWORD= 
+EMAIL_FROM=noreply@fgrorlegger.no
+EMAIL_FROM_NAME=FGRoerlegger
