Finished mail, a copy will be sent to both the customer and the customer service employee

--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@ JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRE_TIME=7
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
-EMAIL_USER= 
-EMAIL_PASSWORD= 
+EMAIL_USER=16572ae146dccc
+EMAIL_PASSWORD=663c89d32fa965
 EMAIL_FROM=noreply@fgrorlegger.no
 EMAIL_FROM_NAME=FGRoerlegger
